--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^6.2.0",
     "firebase": "^9.6.3",
     "firebase-login": "^1.0.0",
     "firebase-tools": "^10.1.1",
